syntax = "proto3";

package xavier.v1.openai;

option go_package = "github.com/zencodinglab/xavier/gen/go/proto/xavier/v1/openai";

service OpenAI {
  rpc GetModels (GetModelsRequest) returns (GetModelsResponse);
  rpc Completion (CompletionRequest) returns (CompletionResponse);
}

message GetModelsRequest {}

message GetModelsResponse {
  repeated Model models = 1;
}

message Model {
  string id = 1;
  string object = 2;
  int64 created = 3;
  string owned_by = 4;
  repeated Permission permissions = 5;
  string root = 6;
  string parent = 7;
}

message Permission {
  string id = 1;
  string object = 2;
  int64 created = 3;
  bool allow_create_engine = 4;
  bool allow_sampling = 5;
  bool allow_logprobs = 6;
  bool allow_search_indices = 7;
  bool allow_view = 8;
  bool allow_fine_tuning = 9;
  string organization = 10;
  string group = 11;
  bool is_blocking = 12;
}

message CompletionRequest {
  string model = 1;
  string prompt = 2;
  int32 max_tokens = 3;
  float temperature = 4;
}

message CompletionResponse {
  string id = 1;
  string object = 2;
  int64 created = 3;
  repeated CompletionChoice choices = 4;
  CompletionUsage usage = 5;
}

message CompletionChoice {
  string text = 1;
  int32 index = 2;
  repeated float logprobs = 3;
  string finish_reason = 4;
}

message CompletionUsage {
  int32 prompt_tokens = 1;
  int32 completion_tokens = 2;
  int32 total_tokens = 3;
}
